--- a/index.html
+++ b/index.html
@@ -183,10 +183,10 @@
             </section>
             <!--Links-->
             <section>
-                <a target="_bLank" href=""></a><br>   
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
+                <a target="_bLank" href="https://cloudstackcode01.github.io/Finding-the-Right-Medicare-Leads-for-Agents-Who-Want-Real-Results/">https://cloudstackcode01.github.io/Finding-the-Right-Medicare-Leads-for-Agents-Who-Want-Real-Results/</a><br>   
+                <a target="_bLank" href="https://jeremyparkercloudstack.s3.us-east-005.backblazeb2.com/Agent+Autopilot/Finding+the+Right+Medicare+Leads+for+Agents+Who+Want+Real+Results/index.html">https://jeremyparkercloudstack.s3.us-east-005.backblazeb2.com/Agent+Autopilot/Finding+the+Right+Medicare+Leads+for+Agents+Who+Want+Real+Results/index.html</a><br>
+                <a target="_bLank" href="https://finding-the-right-medicar-git-26f1c2-cloudstackcode01s-projects.vercel.app/">https://finding-the-right-medicar-git-26f1c2-cloudstackcode01s-projects.vercel.app/</a><br>
+                <a target="_bLank" href="https://glittering-empanada-799dc2.netlify.app/">https://glittering-empanada-799dc2.netlify.app/</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
